# journal_rs

./: .gitignore  COPYRIGHT  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  prelude.rs
src/app/: input.rs  journal.rs  menu.rs  mod.rs
src/app/journal/: page.rs
