[package]
name = "journal_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = "4.3.0"
rand = "0.8.5"
colored = "2.0.0"
regex = "1.5.4"
