[package]
name = "review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = {version = "4.3.0", features = ["derive"]}
serde = "1.0"
rand = "0.8.5"
colored = "2.0.0"
regex = "1.5.4"
chrono = "0.4"
